examples/errors/unexpected_character.eigs
# ERROR DEMO — unexpected character.
# The lexer rejects characters outside the language's token set.
# expect-error: Syntax error line 4: unexpected character '@'
x is @
